--- a/about.css
+++ b/about.css
@@ -225,6 +225,66 @@ h2 {
     margin-bottom: 2rem;
     padding-left: 20px;
 }
+.timeline-sub{
+    font-size: 12px;
+    font-weight: 500;
+    color: var(--accent);
+}
+.socials {
+    position: relative;
+    margin-right: 5%;
+    width: 100px;
+    font-size: 12px;
+    color: white;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.058);
+    border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    transition: 300ms all;
+}
+.socials:hover{
+    position: relative;
+    cursor: pointer;
+    margin-right: 5%;
+    font-weight: bold;
+    width: 100px;
+    color: black;
+    text-align: center;
+    border-radius: 50px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    transition: 300ms all;
+}
+.webs{
+    display: flex;
+    justify-content: start;
+    margin-top: 30px;;
+}
+.socials::before {
+    content: '';
+    width: 0px;
+    position: absolute;
+    height: 0%;
+    z-index: -1;
+    background: var(--accent);
+    border-radius: 30px;
+    bottom: 0%;
+    left: 0%;
+}
+.socials:hover::before{
+    transition: 300ms all;
+    content: '';
+    width: 80px;
+    position: absolute;
+    height: 100%;
+    z-index: -1;
+    background: var(--accent);
+    border-radius: 30px;
+    bottom: 0%;
+    left: 0%;
+}
+
 
 .timeline-item::before {
     content: '';
