--- a/style.css
+++ b/style.css
@@ -157,7 +157,7 @@ h1 {
     cursor: pointer;
     transition: all 300ms;
     background-color: white;
-    text-shadow: 1px 1px 2px rgb(152, 152, 152), 0 0 25px rgba(21, 21, 21, 0.645), 0 0 5px rgba(35, 35, 35, 0.36);
+    /* text-shadow: 1px 1px 2px rgb(152, 152, 152), 0 0 25px rgba(21, 21, 21, 0.645), 0 0 5px rgba(35, 35, 35, 0.36); */
     color: black;
 }
 .section.visible {
@@ -167,7 +167,7 @@ h1 {
 
 h2 {
     margin-bottom: 1rem;
-    color: var(--primary);
+    color: var(--accent);
 }
 
 footer {
